# py3status-amdfan

./: PKGBUILD  README.md  build_in_chroot  pyproject.toml
src/py3status_amdfan/: fan_monitor.py
