[tool.poetry]
name = "py3status-amdfan"
version = "0.1.7"
description = "py3status monitor to show amdgpu fan speeds and temp"
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mcgillij/py3status-amdfan"
repository = "https://github.com/mcgillij/py3status-amdfan"
documentation = "https://github.com/mcgillij/py3status-amdfan"
keywords = ["amdgpu", "monitor", "fan", "i3", "py3status"]
#packages = [{include = "py3status_amdfan"}]

classifiers = [
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware",
]

[tool.poetry.plugins."py3status"]
module = "py3status_amdfan.fan_monitor"

[tool.poetry.dependencies]
python = "^3.10"
py3status = "^3.47"
amdfan = "^0.1.21"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.9"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
