[tool.poetry]
name = "py3status-amdfan"
version = "0.1.17"
description = "py3status monitor show amdgpu fan speeds and temp"
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mcgillij/py3status-amdfan"
repository = "https://github.com/mcgillij/py3status-amdfan"
documentation = "https://github.com/mcgillij/py3status-amdfan"
keywords = ["amdgpu", "monitor", "fan", "i3", "py3status"]

classifiers = [
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware",
]

[tool.poetry.plugins."py3status"]
module = "py3status_amdfan.fan_monitor"

[tool.poetry.dependencies]
python = "^3.11 || ^3.12 || ^3.13"
py3status = "^3.40"
amdfan = "^0.2.5"


[tool.poetry.group.dev.dependencies]
black = "*"
pylint = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
